Fixing title alignment for course overview page when unenrolled (#794)

--- a/apps/recent-activity/src/base-scss/mat-ui-overrides.scss
+++ b/apps/recent-activity/src/base-scss/mat-ui-overrides.scss
@@ -828,6 +828,7 @@ apx-chart .apexcharts-toolbar {
 
         .stripes,
         .description .title {
+          width: 100%;
           max-width: 100%;
         }
         .container {
